--- a/app/globals.css
+++ b/app/globals.css
@@ -1,33 +1,61 @@
 @tailwind base;
-@tailwind components;
-@tailwind utilities;
+  @tailwind components;
+  @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  @layer base {
+ 
+:root  {
+  --background: 154 100% 95%;
+  --foreground: 154 5% 0%;
+  --card: 154 50% 90%;
+  --card-foreground: 154 5% 10%;
+  --popover: 154 100% 95%;
+  --popover-foreground: 154 100% 0%;
+  --primary: 154 72% 41%;
+  --primary-foreground: 0 0% 100%;
+  --secondary: 154 30% 70%;
+  --secondary-foreground: 0 0% 0%;
+  --muted: 116 30% 85%;
+  --muted-foreground: 154 5% 35%;
+  --accent: 116 30% 80%;
+  --accent-foreground: 154 5% 10%;
+  --destructive: 0 100% 30%;
+  --destructive-foreground: 154 5% 90%;
+  --border: 154 30% 50%;
+  --input: 154 30% 18%;
+  --ring: 154 72% 41%;
+  --radius: 0.5rem;
+}
+.dark  {
+  --background: 154 50% 5%;
+  --foreground: 154 5% 90%;
+  --card: 154 50% 0%;
+  --card-foreground: 154 5% 90%;
+  --popover: 154 50% 5%;
+  --popover-foreground: 154 5% 90%;
+  --primary: 154 72% 41%;
+  --primary-foreground: 0 0% 100%;
+  --secondary: 154 30% 10%;
+  --secondary-foreground: 0 0% 100%;
+  --muted: 116 30% 15%;
+  --muted-foreground: 154 5% 60%;
+  --accent: 116 30% 15%;
+  --accent-foreground: 154 5% 90%;
+  --destructive: 0 100% 30%;
+  --destructive-foreground: 154 5% 90%;
+  --border: 154 30% 18%;
+  --input: 154 30% 18%;
+  --ring: 154 72% 41%;
+  --radius: 0.5rem;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
   }
-}
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
+  @layer base {
+    * {
+      @apply border-border;
+    }
+    body {
+      @apply bg-background text-foreground;
+    }
   }
-}
